<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:fitsSystemWindows="true"
    android:scrollbars="none"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <View
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/home_gradient_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_wishlist"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_fav"
            app:layout_constraintBottom_toBottomOf="@+id/et_search"
            app:layout_constraintEnd_toStartOf="@id/et_search"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_search"
            app:tint="#757575" />

        <ImageView
            android:id="@+id/et_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#757575" />

        <ImageView
            android:id="@+id/iv_profile_photo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/round_camera"
            app:layout_constraintBottom_toTopOf="@+id/layout_header"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_medium"
            android:lines="1"
            android:text=""
            android:textColor="#0F2974"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile_photo"
            app:layout_constraintEnd_toStartOf="@+id/btn_wishlist"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_profile_photo"
            app:layout_constraintTop_toTopOf="@+id/iv_profile_photo"
            app:layout_constraintVertical_bias="0.38" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/layout_header"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_search">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/header_appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:backgroundTint="@color/transparent"
                app:elevation="0dp">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_collapseMode="parallax">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardView"
                            android:layout_width="0dp"
                            android:layout_height="170dp"
                            android:layout_marginTop="8dp"
                            app:cardBackgroundColor="@color/transparent"
                            app:cardElevation="0dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <androidx.viewpager2.widget.ViewPager2
                                android:id="@+id/vp_home_banner"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                            </androidx.viewpager2.widget.ViewPager2>
                        </androidx.cardview.widget.CardView>

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/pb_banner"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="@+id/cardView"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/cardView"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/loading" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.appbar.CollapsingToolbarLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:scrollbars="none">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:paddingHorizontal="16dp"
                        android:text="Telusuri Kategori"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tab_home_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="#00FFFFFF"
                        android:clipToPadding="false"
                        android:paddingHorizontal="16dp"
                        android:paddingBottom="2dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:tabBackground="@drawable/home_category_tab_background"
                        app:tabIconTint="@color/main_category_tab_icon_color"
                        app:tabIndicator="@null"
                        app:tabInlineLabel="true"
                        app:tabMode="scrollable"
                        app:tabPaddingEnd="28dp"
                        app:tabPaddingStart="12dp"
                        app:tabRippleColor="@null"
                        app:tabSelectedTextColor="@color/white"
                        app:tabTextAppearance="@style/home_tab_text_appreance"
                        app:tabTextColor="#3C3C3C">

                    </com.google.android.material.tabs.TabLayout>

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/shimmer_category"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginVertical="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:shimmer_auto_start="false">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="16dp"
                                android:layout_weight="1"
                                app:cardBackgroundColor="@color/grey"
                                app:cardCornerRadius="8dp" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginHorizontal="8dp"
                                android:layout_weight="1"
                                app:cardBackgroundColor="@color/grey"
                                app:cardCornerRadius="8dp" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginEnd="16dp"
                                android:layout_weight="1"
                                app:cardBackgroundColor="@color/grey"
                                app:cardCornerRadius="8dp" />
                        </LinearLayout>

                    </com.facebook.shimmer.ShimmerFrameLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:animateLayoutChanges="true"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                tools:context=".ui.home.HomeFragment">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/pb_home_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="3dp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.19"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/loading" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_home_product"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="24dp"
                    android:clipToPadding="false"
                    android:paddingHorizontal="16dp"
                    android:paddingTop="2dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:spanCount="2"
                    tools:listitem="@layout/home_product_list_layout" />

                <ImageView
                    android:id="@+id/iv_empty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/login"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/rv_home_product"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tv_empty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:fontFamily="@font/montserrat_alternates_semibold"
                    android:text="Tidak ada produk"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_empty" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>